--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <meta charset="utf-8">
 <style>
 body {
-   background-color: #A5511F;
+   background-color: #a5511f;
    text-align: center;
    margin: 0;
    padding: 0;
 }
 canvas {
-    width:100%;
     position:absolute;
     top:50%;
     left:50%;
@@ -23,7 +22,7 @@ canvas {
 </style>
 </head>
 <body>
-<canvas id="mycanvas" width="640" height="360"></canvas>
+<canvas id="mycanvas"></canvas>
 <script src="js/game.js" type="text/javascript"></script>
 <script src="js/board.js" type="text/javascript"></script>
 <script src="js/snake.js" type="text/javascript"></script>
